feat: roadmap to carousel

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "embla-carousel-wheel-gestures": "^8.1.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.0",
